# Autonomous-Migration-Architect-AMA

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MIGRATION.md  Makefile  README.md  USER_GUIDE.md  candidate_glossary.json  dash_test.hitl.json  dash_test.json  dbt_project.yml  ddl_manifest.json  demo.ps1  demo.sh  demo_runner.py  docker-compose.yml  full_db_report.xlsx  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
chaos_data/glossary/: he_en_columns.json
chaos_data/sample_data/ddl/: orders_columns.json  table_metadata.json
docker/: api.Dockerfile  api_entrypoint.sh  web.Dockerfile
docs/: LIVE_CONNECTION.md  SQLSERVER.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  app-shell.tsx  hitl-types.ts  main.tsx  state.tsx  styles.css  theme.ts  types.ts
frontend/src/components/: JsonPanel.tsx  PageCard.tsx  StatCard.tsx
frontend/src/features/: AgentPage.tsx  BulkPage.tsx  CockpitPage.tsx  DqPage.tsx  GlossaryPage.tsx  HitlPage.tsx  LiveConnectionPage.tsx  OverviewPage.tsx  PlannerPage.tsx  TableLineageGraph.tsx  TablesPage.tsx  common.ts  hitl-shared.tsx  planner-format.tsx
sample_data/comms/: customer_success.jsonl  data_engineering.jsonl  exec_reporting.jsonl  finance_close.jsonl  incidents.jsonl
sample_data/dashboard/: demo_with_review.hitl.json  demo_with_review.json
sample_data/ddl/: analytics_columns.json  crm_columns.json  ddl_manifest.json  domain_taxonomy.json  finance_columns.json  legacy_hebrew_columns.json  logistics_columns.json  marketing_columns.json  orders_columns.json  sales_columns.json  table_metadata.json
sample_data/glossary/: he_en_columns.json  he_en_columns_dirty.json
sample_data/kfar_supply/: README.md  kfar_report.json
sample_data/kfar_supply/comms/: kfar_slack.jsonl
sample_data/kfar_supply/ddl/: dbo_customers.json  dbo_order_lines.json  dbo_orders.json  finance_invoices.json  finance_payments.json  kfar_manifest.json  logistics_shipments.json
sample_data/scale_engine_chaos/: README.md  chaos_comms.jsonl  chaos_glossary.json  chaos_manifest.json  chaos_report.json  chaos_sql_logs.jsonl
sample_data/sql_logs/: full_db_chaos.jsonl  prod_queries.jsonl  sample_file.jsonl
scripts/: demo-chaos.ps1  install.ps1  install.sh  verify_stress_ingestion.py
src/ama/: __init__.py  ai_query_helper.py  alias_resolver.py  benchmarks.py  bulk_runner.py  business_logic.py  cli.py  comms_ingest.py  config.py  ddl_manifest.py  discovery.py  embeddings.py  env_resolver.py  git_ingest.py  hitl_apply.py  importance.py  lineage.py  report_sinks.py  reports.py  sanitize.py  schema_relationships.py  sql_pipeline.py  stress_monitor.py  vector_store.py
tests/: test_api.py  test_business_logic.py  test_chaos_dataset.py  test_dashboard_smoke.py  test_dbt_migration.py  test_ddl_manifest.py  test_domain_factory.py  test_enterprise_scale_refactor.py  test_excel_report.py  test_export_plan.py  test_extraction.py  test_glossary_generation.py  test_glossary_source_report.py  test_hitl_api.py  test_hitl_apply.py  test_infrastructure.py  test_iter_max_records.py  test_kfar_jsonl_gen.py  test_kfar_supply.py  test_lineage_subgraph.py  test_live_ingestion.py  test_mcp_providers.py  test_merge_floor.py  test_merge_scope_summary.py  test_migration_agent.py  test_parsing_alias.py  test_planner_broken_lineage.py  test_planner_lineage_order.py  test_report_output.py  test_scale_engine.py  test_schema_relationships.py  test_schemas.py  test_smoke.py  test_sql_log_safeguards.py  test_sql_logs_glob.py  test_sql_self_heal.py  test_sqlserver_provider.py  test_stress_alias.py  test_translator_logic.py
tools/: _git_check.py  apply_hebrew_bridge.py  dirty_kfar_queries.sql  execute_kfar_benchmark.py  generate_domain_data.py  generate_extreme_chaos.py  generate_full_db_chaos.py  generate_kfar_benchmark.py  generate_kfar_supply.py  generate_sample_file.py  generate_scale_engine_chaos.py  generate_stress_samples.py  kfar_test_queries.sql  print_hitl_signature.py  report_to_jira_csv.py  setup_dev_mssql.py
(+160 files in other folders)
