[project]
name = "ama-ingestion"
version = "1.0.0"
description = "Autonomous Migration Architect: SQL log ingestion, DDL alignment, discovery, and managerial reports"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "sqlglot>=23.0.0",
    "qdrant-client>=1.7.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
embed = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]
viz = [
    "pyvis>=0.3.2",
]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
ama-ingest = "ama.cli:main"
ama-dashboard = "ama.cli:dashboard_main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
