[project]
name = "ama-ingestion"
version = "1.0.0"
description = "Autonomous Migration Architect: SQL log ingestion, DDL alignment, discovery, and managerial reports"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "rich>=13.0.0",
    "sqlglot>=23.0.0",
    "qdrant-client>=1.7.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "dbt-duckdb",
]

[project.optional-dependencies]
embed = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]
viz = [
    "pyvis>=0.3.2",
]
dev = [
    "pytest>=8.0.0",
]

postgres = ["psycopg2-binary>=2.9"]
oracle   = ["oracledb>=2.0"]
encrypt  = ["cryptography>=42.0"]
sqlserver = ["pyodbc>=5.0"]
mcp-all  = [
    "psycopg2-binary>=2.9",
    "oracledb>=2.0",
    "cryptography>=42.0",
    "pyodbc>=5.0",
]

[project.scripts]
ama-ingest = "ama.cli:main"
ama-dashboard = "ama.cli:dashboard_main"
ama-api = "ama.api.main:start"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
